--- a/styles/_section3.scss
+++ b/styles/_section3.scss
@@ -48,7 +48,6 @@
         box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-quaternary;
         width: 85%;
         padding: 2.7em 0 2.7em;
-        padding: 4em 0 2.7em;
 
         .section3__card3__containerPrice {
           transform: translate(0, -20%);
@@ -78,7 +77,6 @@
 
         width: 85%;
         padding: 2.7em 0 2.7em;
-        padding: 4em 0 2.7em;
         .section3__card3__containerPrice {
           transform: translate(0, -43%);
         }
@@ -104,11 +102,12 @@
 
       &:nth-of-type(3):hover {
         box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-tertiary;
+
         width: 85%;
-        padding: 4em 0 2.7em;
+        padding: 2.7em 0 2.7em;
 
         .section3__card3__containerPrice {
-          transform: translate(0, -45%);
+          transform: translate(0, -43%);
         }
 
         button {
@@ -120,7 +119,6 @@
     }
 
     &__containerPrice {
-      // background-color: blue;
       text-align: center;
       display: inline-block;
       width: 45%;
@@ -193,11 +191,10 @@
       flex-direction: row;
       justify-content: center;
       padding: 3em 0em;
-      // display: none;
     }
 
     .section3__card3 {
-      margin: 0 2.2em;
+      margin: 0 2.15em;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -206,9 +203,11 @@
       padding: 4em 0 4em;
 
       button {
+        padding: 1em 5em;
         display: block;
         clear: absolute;
         transform: translate(-30%, 475%);
+        transform: translate(-18%, 465%);
       }
 
       &__containerPrice {
@@ -265,87 +264,52 @@
       }
 
       &:nth-of-type(1) /*basic card*/ {
-        border: 0.0625em solid $color-quaternary;
-        button {
-          background-color: $color-quaternary;
-        }
-
-        .section3__card3__containerPrice__price {
-          color: $color-quaternary;
-        }
-
         &:nth-of-type(1):hover {
-          box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-quaternary;
-          width: 27em;
-          // transform: scale(110%);
+          width: 25em;
+          transform: scale(104%, 115%);
+          margin: 0 1.4em;
 
           .section3__card3__containerPrice {
-            transform: translate(0, -20%);
+            transform: translate(0, -30%);
           }
 
           button {
-            top: 15em;
-            right: 8em;
-            box-shadow: 0.125em 0.5625em 1.5625em -0.625em $color-quaternary;
+            top: 14em;
+            right:6.5em;
           }
         }
       }
 
       &:nth-of-type(2) /*professional card*/ {
-        border: 0.0625em solid $color-primary;
-
-        button {
-          background-color: $color-primary;
-        }
-
-        .section3__card3__containerPrice__price {
-          color: $color-primary;
-        }
-
         &:nth-of-type(2):hover {
-          box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-primary;
-
           width: 25em;
-          margin: 0 1.45em;
-          // transform: scale(110%);
+          transform: scale(104%, 115%);
+          margin: 0 1.4em;
 
           .section3__card3__containerPrice {
-            transform: translate(0, -20%);
+            transform: translate(0, -30%);
           }
 
           button {
-            top: 15em;
-            right: 8em;
-            box-shadow: 0.125em 0.5625em 1.5625em -0.625em $color-primary;
+            top: 14em;
+            right:6.5em;
           }
         }
       }
 
       &:nth-of-type(3) /*premium card*/ {
-        border: 0.0625em solid $color-tertiary;
-
-        button {
-          background-color: $color-tertiary;
-        }
-
-        .section3__card3__containerPrice__price {
-          color: $color-tertiary;
-        }
-
         &:nth-of-type(3):hover {
-          box-shadow: 0.125em 0.5625em 3.125em -1.5625em $color-tertiary;
-          
-          width: 30%;
-          transform: scale(110%);
+          width: 25em;
+          transform: scale(104%, 115%);
+          margin: 0 1.4em;
 
           .section3__card3__containerPrice {
-            transform: translate(0, -43%);
+            transform: translate(0, -30%);
           }
 
           button {
-            top: 15em;
-            right: 8em;
-            box-shadow: 0.125em 0.5625em 1.5625em -0.625em $color-tertiary;
+            top: 14em;
+            right:6.5em;
           }
         }
       }
