--- a/styles/index.css
+++ b/styles/index.css
@@ -917,23 +917,26 @@ header .header__container__img {
 .section4__header__contact {
   display: inline-block;
   width: 100%;
-  margin: 2.1875rem auto 1.25rem;
+  text-align: left;
+  margin: 2.1875em auto 1.25em;
 }
 .section4__header__contact__pack {
-  margin: 0.25rem;
-  display: inline-block;
-  position: relative;
+  display: inline;
   width: 100%;
 }
 .section4__header__contact__pack__icon {
-  width: 1.25rem;
+  display: inline;
+  width: 1.25em;
+  margin: 0.5em 0.2em 0;
+  padding: 0;
 }
 .section4__header__contact__pack__text {
+  margin: 0em 0.2em;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  text-align: left;
   color: #a5a5a5;
-  position: absolute;
-  top: 0;
-  width: 80%;
-  left: 2.1619em;
 }
 .section4__form {
   display: block;
@@ -954,7 +957,7 @@ header .header__container__img {
   display: block;
   width: 19.5em;
   border: none;
-  border-bottom: 0.125em solid #95989A;
+  border-bottom: 0.125em solid #95989a;
 }
 .section4__form__terms {
   width: 100%;
@@ -1026,23 +1029,21 @@ header .header__container__img {
   }
   .section4__header__contact {
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 0em;
+    display: flex;
+    flex-direction: column;
+    margin-left: -0.9em;
   }
   .section4__header__contact__pack {
-    width: 85%;
-  }
-  .section4__header__contact__pack:nth-child(1) {
-    grid-column: span 2;
-    margin: 0.21em;
-  }
-  .section4__header__contact__pack:nth-child(2) {
-    margin-left: -6.5em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0.25em;
   }
   .section4__header__contact__pack__icon {
-    width: 1.5em;
-    max-width: 100%;
+    margin: 0.25em 0.5em;
+  }
+  .section4__header__contact__pack__text {
+    margin-top: 0.25em;
   }
   .section4__header__contact__pack__text {
     display: block;
@@ -1099,7 +1100,7 @@ footer .pack__copyright {
 footer .packLogos {
   position: absolute;
   top: 1.875em;
-  left: 18.125em;
+  left: 15.125em;
   display: inline-block;
 }
 footer .packLogos__x {
@@ -1108,6 +1109,9 @@ footer .packLogos__x {
 }
 footer .packLogos__facebook {
   padding-right: 1.25em;
+}
+footer .packLogos__linkedin {
+  width: 1.5em;
 }
 
 @media (min-width: 1000px) {
