--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,6 +7,7 @@
 @import "./section3.scss";
 @import "./section4.scss";
 @import "./footer.scss";
+@import "./components/percentageScroller.scss";
 
 * {
   box-sizing: border-box;
