--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -1,9 +1,11 @@
 @import "./mixin";
 
 nav {
-  position: fixed;
+  position: sticky;
   width: 100%;
   top: 0;
+  background-color: #fff;
+  z-index: 5;
   box-shadow: 0em 0.1875em 0.375em 0em $color-shadow;
 
   .logoNav {
@@ -71,7 +73,7 @@ nav {
     width: 100%;
     display: flex;
     margin: 0 auto;
-    position: relative;
+    position: sticky;
 
     .limit {
       @include limit;
