buttonToUp done & correct nav

--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -19,11 +19,10 @@
   text-align: left;
 }
 
-@mixin button {
-  border-radius: 25%;
+@mixin buttonG {
   font-family: $font-secondary;
   border-color: transparent;
-  border-radius: 40px;
+  border-radius: 2.5rem;
   display: inline-block;
   cursor: pointer;
   color: #fff;
