--- a/styles/_section3.scss
+++ b/styles/_section3.scss
@@ -15,7 +15,7 @@
   }
 
   button {
-    @include button;
+    @include buttonG;
     padding: 1em 4em;
     border-radius: 1.7em;
     position: absolute;
