--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -114,7 +114,7 @@
       }
 
       button {
-        @include button;
+        @include buttonG;
         position: absolute;
         top: 14em;
         left: 7.3125em;
