--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,14 +1,14 @@
 header {
   display: block;
   width: 100%;
-  margin: 8.5em auto 0;
   text-align: center;
 
   h1 {
     font-size: 2rem;
     font-weight: 400;
-    line-height: 2.5681em;
-    margin: 2.1em auto 0em;
+    line-height: 2.3em;
+    margin: 4.1em auto 0em;
+    // margin: 2em auto 1em;
   }
 
   p {
@@ -16,12 +16,12 @@ header {
     font-family: $font-secondary;
     font-size: 1rem;
     font-weight: 400;
-    margin: 0 auto;
+    margin: 0 auto 1em;
     padding: 0 4em;
   }
 
   button {
-    @include button;
+    @include buttonG;
     box-shadow: .3125em .625em .875em 0em #07ace64a;
     font-size: 1em;
     font-weight: 700;
