--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -1,7 +1,7 @@
 @import "./mixin";
 
 nav {
-  position: sticky;
+  position: fixed;
   width: 100%;
   top: 0;
   background-color: #fff;
@@ -35,22 +35,29 @@ nav {
     right: 2em;
   }
 
-  ul { //nav
+  ul {
     display: none;
   }
-
+  
   .open {
+    box-shadow: 0em 0.3875em 0.375em 0em $color-shadow;
+    position: absolute;
     display: block;
     width: 100%;
     padding: 1em;
     background-color: #fff;
     z-index: 999;
   }
-
+  
   .noVisible {
     display: none;
   }
-
+  
+  menu {
+    position: absolute;
+    // margin-bottom: 8em;
+  }
+  
   li {
     display: block;
     color: $color-secondary;
@@ -73,7 +80,7 @@ nav {
     width: 100%;
     display: flex;
     margin: 0 auto;
-    position: sticky;
+    position: fixed;
 
     .limit {
       @include limit;
