--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./components/components.scss";
 @import "./mixin";
 @import "./nav.scss";
 @import "./header.scss";
@@ -7,7 +8,6 @@
 @import "./section3.scss";
 @import "./section4.scss";
 @import "./footer.scss";
-@import "./components/percentageScroller.scss";
 
 * {
   box-sizing: border-box;
