--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 }
 .scrollerBar__bar {
   position: fixed;
+  top: 4.2em;
   width: 0%;
   height: 0.5em;
   background-color: #08a6e4;
@@ -13,19 +14,26 @@
 
 .container_icon {
   position: fixed;
-  bottom: 3.5em;
-  right: 1.75em;
+  bottom: 4.5em;
+  right: 2em;
   margin: 0;
-  padding: 0.25em;
+  padding: 0.5em;
   border-radius: 50%;
   background-color: #a5a5a5;
   cursor: pointer;
   z-index: 50;
+  border: transparent;
 }
 .container_icon__arrowUp {
   width: 1em;
 }
 
+@media (min-width: 1000px) {
+  .container_icon {
+    bottom: 2.4em;
+    right: 4em;
+  }
+}
 nav {
   position: fixed;
   width: 100%;
@@ -42,19 +50,17 @@ nav .logoNav {
   color: #08a6e4;
   text-align: left;
   display: inline;
-  margin-right: 3.7em;
+  margin-right: 3em;
 }
 nav button {
   border: none;
   background-color: #fff;
+  position: absolute;
+  top: 2em;
+  right: 2em;
 }
 nav__burguer {
   display: inline;
-  position: absolute;
-  top: 0.9em;
-  right: 0.7em;
-  margin-bottom: 0.5em;
-  padding: 1em;
 }
 nav__close {
   display: none;
@@ -116,17 +122,19 @@ nav li:hover {
   nav .limit .logoNav {
     margin-left: 4.3em;
   }
-  nav .limit .burger {
+  nav .limit .burger,
+  nav .limit .open,
+  nav .limit .close {
     display: none;
   }
-  nav .limit ul {
+  nav .limit .menu {
     display: flex;
     flex-direction: row;
     list-style: none;
     margin: 0;
     padding: 0 5em 0 0;
   }
-  nav .limit ul li {
+  nav .limit li {
     color: #a5a5a5;
     font-family: "Open Sans", sans-serif;
     font-size: 0.75rem;
@@ -135,7 +143,7 @@ nav li:hover {
     padding: 0 0.88em;
     margin: 0em 0em 0em 9em;
   }
-  nav .limit ul li:hover {
+  nav .limit li:hover {
     margin-bottom: -2.5em;
     border-bottom: 0.4em solid #08a6e4;
   }
@@ -144,6 +152,7 @@ header {
   display: block;
   width: 100%;
   text-align: center;
+  margin-bottom: 0.5em;
 }
 header h1 {
   font-size: 2rem;
@@ -1221,13 +1230,13 @@ footer .packLogos__linkedin {
     text-align: left;
   }
   footer .limit .packLogos {
-    display: flex;
+    display: absolute;
     top: 0;
-    left: -6.25em;
+    left: -20.8em;
     position: relative;
     width: 4.6875em;
+    width: 7em;
     justify-content: space-around;
-    margin-right: 2.5em;
   }
 }
 * {
