--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -10,33 +10,36 @@
 
   &__bar {
     position: fixed;
+    top: 4.2em;
     width: 0%;
     height: 0.5em;
     background-color: $color-primary;
   }
 }
 
-//!BUTTON TO UP
+//! BUTTON TO UP
 
 .container_icon {
   position: fixed;
-  bottom: 3.5em;
-  right: 1.75em;
+  bottom: 4.5em;
+  right: 2em;
   margin: 0;
-  padding: 0.25em;
+  padding: 0.5em;
   border-radius: 50%;
   background-color: $color-secondary;
   cursor: pointer;
   z-index: 50;
-  // border: 0.1em solid $color-secondary;
-  // background: radial-gradient(
-  //   ellipse closest-side,
-  //   $color-primary,
-  //   $color-secondary,
-  // );
+  border: transparent;
 
   &__arrowUp {
     width: 1em;
-    // height: 2em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container_icon {
+    bottom: 2.4em;
+
+    right: 4em;
   }
 }
