--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -83,13 +83,29 @@
         outline: none;
       }
 
-      input:focus {
-        outline: none;
-        box-shadow: 1em 1em 3.125em -1.5625em $color-primary;
-      }
 
       .invalid {
-        border-bottom: 1px solid red;
+        border-bottom: .0625em solid red;
+      }
+
+      input:focus.invalid {
+        outline: none;
+      }
+
+      .error {
+        width: 100%;
+        padding: 0;
+      
+        font-size: 80%;
+        color: white;
+        background-color: #900;
+        border-radius: 0 0 .3125rem .3125rem;
+      
+        box-sizing: border-box;
+      }
+      
+      .error.active {
+        padding: 0.3em;
       }
 
     }
