red border-bottom to invalid form

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -43,7 +43,7 @@ header {
       height: 16.6875rem;
       display: block;
       object-fit: cover;
-      margin: 0rem auto;
+      margin: 0em auto;
     }
   }
 }
