--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -95,21 +95,20 @@
     }
     
     .error {
+      display: none;
       width: 100%;
       font-size: 80%;
       color: white;
       background-color: #900;
       border-radius: 0 0 .3125rem .3125rem;
       box-sizing: border-box;
+
+      .active {
+        display: block;
+      }
     }
     
-    .notVisible{
-      display: none;
-    }
     
-    .error.active {
-      padding: 0.3em;
-    }
 
     &__terms {
       width: 100%;
