clean code and correct styles

--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -96,8 +96,8 @@
     
     .error {
       display: none;
-      width: 100%;
-      font-size: 80%;
+      width: 20em;
+      font-size: 0.9em;
       color: white;
       background-color: tomato;
       margin-bottom: 0.5em;
