--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./variables.scss";
 @import "./components/components.scss";
+@import "./components/components.scss";
 @import "./mixin";
 @import "./nav.scss";
 @import "./header.scss";
